View Issue Details

IDProjectCategoryView StatusLast Update
0024878Open CASCADEOCCT:Visualizationpublic2014-05-16 15:13
ReporterdbpAssigned Todbp 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version6.7.1Fixed in Version6.7.1 
Summary0024878: Ray-tracing mode does not work in IE Sample
DescriptionWhen VBO is used, ray-tracing mode does not work in IE Sample.
TagsNo tags attached.
Test case numberNot needed

Activities

dbp

2014-04-28 18:31

developer   ~0029109

Dear kgv,

please check the fix in branch CR24878.

kgv

2014-04-28 18:57

developer   ~0029110

Please test the patch for OCCT671 beta.

dbp

2014-04-28 19:14

developer   ~0029112

Dear kgv,

please review modified patch in branch CR24878.

kgv

2014-04-28 19:30

developer   ~0029114

Please test.

apn

2014-05-14 14:38

administrator   ~0029320

Dear BugMaster,

Branch CR24878 (and products from GIT master) was compiled on Linux, Windows and MacOS platforms and tested.
SHA-1: 38391c10a36563cd8304892972331605a3938e57

Number of compiler warnings:

occt component :
Linux: 31 (17 on master 6.8.0)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 2 (2 on master)

Regressions/Differences:
No regressions

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 396892160 / 398472992
Total CPU difference: 57732.64000000014 / 52878.27999999996

Testing on Windows:
Total MEMORY difference: 438221564 / 438787376
Total CPU difference: 43406.875 / 35514.828125

There are no differences in images found by testdiff.

Ray-tracing works properly in QT Products samples (Parasolid, ACIS, etc) with enabled VBO.

Issue History

Date Modified Username Field Change
2014-04-28 17:12 dbp New Issue
2014-04-28 17:12 dbp Assigned To => dbp
2014-04-28 18:31 dbp Note Added: 0029109
2014-04-28 18:31 dbp Assigned To dbp => kgv
2014-04-28 18:31 dbp Status new => resolved
2014-04-28 18:57 kgv Note Added: 0029110
2014-04-28 18:57 kgv Assigned To kgv => bugmaster
2014-04-28 18:57 kgv Status resolved => reviewed
2014-04-28 18:57 dbp Assigned To bugmaster => dbp
2014-04-28 18:57 dbp Status reviewed => assigned
2014-04-28 19:14 dbp Note Added: 0029112
2014-04-28 19:14 dbp Assigned To dbp => kgv
2014-04-28 19:14 dbp Status assigned => resolved
2014-04-28 19:30 kgv Note Added: 0029114
2014-04-28 19:30 kgv Assigned To kgv => bugmaster
2014-04-28 19:30 kgv Status resolved => reviewed
2014-04-28 20:43 mkv Assigned To bugmaster => mkv
2014-05-08 18:47 mkv Assigned To mkv => apn
2014-05-14 14:38 apn Note Added: 0029320
2014-05-14 14:39 apn Test case number => Not needed
2014-05-14 14:39 apn Assigned To apn => bugmaster
2014-05-14 14:39 apn Status reviewed => tested
2014-05-16 15:13 bugmaster Status tested => closed
2014-05-16 15:13 bugmaster Assigned To bugmaster => dbp
2014-05-16 15:13 bugmaster Resolution open => fixed
2014-05-16 15:13 bugmaster Fixed in Version => 6.7.1