0024878: Ray-tracing mode does not work in IE Sample